Tweaks to CMake configuration. Doesn't work, but committing before trying a different approach.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -35,3 +35,9 @@ Variable.h
 Writer.cc
 Writer.h
 )
+
+#ecbuild_add_library( TARGET     ${PROJECT_NAME}
+#                     SOURCES    ${monio_sources}
+#                     INSTALL_HEADERS LISTED
+#                     HEADER_DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+#                     LINKER_LANGUAGE CXX )
