Applied consistent directory structure and important relevant tests from LFRic-Lite-JEDI. Tests appear on console but do not compile yet as include paths need to be fixed.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ set(MONIO_INCLUDE_DIRS  ${CMAKE_CURRENT_SOURCE_DIR}/src
 set(MONIO_LIBRARIES monio)
 
 include_directories(${MONIO_INCLUDE_DIRS}
-                    ${CMAKE_CURRENT_SOURCE_DIR}/test)
+                    ${CMAKE_CURRENT_SOURCE_DIR}/test/monio)
 
 ## Sources
 add_subdirectory(src)
