Found cmake configuration that appears to work for addition of tests to be inherited from LFRic-Lite. Need to address missing test data directory and potentially tidy a few things up.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@
 # which can be obtained at http://www.apache.org/licenses/LICENSE-2.0.        #
 ###############################################################################
 
-cmake_minimum_required(VERSION 3.12 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.12)
 
 project(monio VERSION 0.0.1 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
@@ -16,31 +16,42 @@ set(CMAKE_DIRECTORY_LABELS ${PROJECT_NAME})
 
 ## Ecbuild integration
 set(ECBUILD_DEFAULT_BUILD_TYPE Release)
-find_package(ecbuild 3.3.2 REQUIRED)
-include(ecbuild_system NO_POLICY_SCOPE)
-ecbuild_declare_project()
+set(ENABLE_MPI ON CACHE BOOL "Compile with MPI")
 
-include(monio_compiler_flags)
+include(ecbuild_system NO_POLICY_SCOPE)
+ecbuild_requires_macro_version(2.7)
+
+## Project
+ecbuild_declare_project()
+set(MONIO_LINKER_LANGUAGE CXX)
 
 ## Dependencies
+find_package(jedicmake REQUIRED)
 find_package(MPI REQUIRED COMPONENTS CXX Fortran)
-find_package(NetCDF COMPONENTS CXX)
 find_package(HDF5 REQUIRED COMPONENTS)
+find_package(NetCDF COMPONENTS CXX)
 find_package(eckit 1.16.1 REQUIRED COMPONENTS MPI)
 find_package(atlas 0.20.2 REQUIRED)
 find_package(oops 1.0.0 REQUIRED)
 
-set(MONIO_INCLUDE_DIRS  ${CMAKE_CURRENT_SOURCE_DIR}/src
-                        ${oops_SOURCE_DIR}/src)
-set(MONIO_LIBRARIES monio)
+## Export package info
+list(APPEND MPI oops atlas)
 
-include_directories(${MONIO_INCLUDE_DIRS}
-                    ${CMAKE_CURRENT_SOURCE_DIR}/test/monio)
+set(MONIO_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/src
+                       ${CMAKE_CURRENT_BINARY_DIR}/src
+                       ${oops_SOURCE_DIR}/src)
+
+set(MONIO_LIBRARIES monio)
+get_directory_property(MONIO_DEFINITIONS COMPILE_DEFINITIONS)
 
 ## Sources
+include(monio_compiler_flags)
+include_directories(${MONIO_INCLUDE_DIRS}
+                    ${CMAKE_CURRENT_SOURCE_DIR}/test)
+
 add_subdirectory(src)
 add_subdirectory(test)
 
-## Export package
+## Finalise configuration
 ecbuild_install_project(NAME ${PROJECT_NAME})
 ecbuild_print_summary()
