Added empty read-write test as placeholder to capture expected LFRic-JEDI use-case.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -23,6 +23,7 @@ execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
 file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/testinput)
 list(APPEND monio_testinput
   testinput/netcdf_write.yaml
+  testinput/read_write.yaml
 )
 
 foreach(FILENAME ${monio_testinput})
@@ -49,5 +50,11 @@ ecbuild_add_test(TARGET monio_coding_norms
 ecbuild_add_test(TARGET  test_monio_netcdf_write
                  SOURCES mains/TestNetCDFWrite.cc
                  ARGS    "testinput/netcdf_write.yaml"
+                 LIBS    monio
+                 MPI     4)
+
+ecbuild_add_test(TARGET  test_monio_read_write
+                 SOURCES mains/TestMonioReadWrite.cc
+                 ARGS    "testinput/read_write.yaml"
                  LIBS    monio
                  MPI     4)
