A number of significant changes to support the integration and use of MONIO in LFRic-JEDI. Along with added functionality to test_monio_read_write this commit includes a Util functions file as a place to put small, general functions.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -44,6 +44,8 @@ monio/Monio.cc
 monio/Monio.h
 monio/Reader.cc
 monio/Reader.h
+monio/Utils.cc
+monio/Utils.h
 monio/Variable.cc
 monio/Variable.h
 monio/Writer.cc
