--- a/test/testinput/read_write.yaml
+++ b/test/testinput/read_write.yaml
@@ -1,10 +1,10 @@
 parameters:
   varMetadata:
-    exner:                    exner_levels_minus_one, true
-    grid_surface_temperature: skin_temperature,       false
-    theta:                    potential_temperature,  false
-    u_in_w3:                  eastward_wind,          true
-    v_in_w3:                  northward_wind,         true
+    exner:                    exner,                    exner_levels_minus_one, exner_levels_minus_one, 1,    70, true
+    grid_surface_temperature: grid_surface_temperature, skin_temperature,       skin_temperature,       K,    71, false
+    theta:                    theta,                    potential_temperature,  potential_temperature,  K,    71, false
+    u_in_w3:                  u_in_w3,                  eastward_wind,          eastward_wind,          ms-1, 70, true
+    v_in_w3:                  v_in_w3,                  northward_wind,         northward_wind,         ms-1, 70, true
   gridName: CS-LFR-224
   partitionerType: cubedsphere
   meshType: cubedsphere_dual
