Code working towards the ability to copy the zeroth level of applicable fields at the point of reading.

--- a/test/testinput/read_write.yaml
+++ b/test/testinput/read_write.yaml
@@ -1,5 +1,5 @@
 parameters:
-  varMetadata:
+  fieldMetadata:
     exner:                    exner,                    exner_levels_minus_one, exner_levels_minus_one, 1,    70, true
     grid_surface_temperature: grid_surface_temperature, skin_temperature,       skin_temperature,       K,    1,  false
     theta:                    theta,                    potential_temperature,  potential_temperature,  K,    71, false
