Changes introduced following a bugfix to LFRic-Lite I/O that didn't handle double precision variable attributes. The code in this commit introduces the AttributeDouble class and uses it in the required read and write locations to address this issue.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,6 +19,8 @@ monio/AtlasWriter.cc
 monio/AtlasWriter.h
 monio/AttributeBase.cc
 monio/AttributeBase.h
+monio/AttributeDouble.cc
+monio/AttributeDouble.h
 monio/AttributeInt.cc
 monio/AttributeInt.h
 monio/AttributeString.cc
