Turned AtlasProcessor class into utility function file as it only contained a few simple functions.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,8 +11,6 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 ecbuild_generate_config_headers( DESTINATION ${INSTALL_INCLUDE_DIR}/monio )
 
 list(APPEND monio_src_files
-monio/AtlasProcessor.cc
-monio/AtlasProcessor.h
 monio/AtlasReader.cc
 monio/AtlasReader.h
 monio/AtlasWriter.cc
@@ -48,6 +46,8 @@ monio/Reader.cc
 monio/Reader.h
 monio/Utils.cc
 monio/Utils.h
+monio/UtilsAtlas.cc
+monio/UtilsAtlas.h
 monio/Variable.cc
 monio/Variable.h
 monio/Writer.cc
