A number of changes to support the new test_monio_fieldset_write. As the simplest of the 5 use-cases in MONIO this was chosen as the place to develop the field-by-field memory efficient approach that will be used for the other write usecases (state and increment). The development was carried out against the test. Which passes only if file writing successfully occurs. The test uses a C48 but has been found to run successfully for a C224.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,7 +8,7 @@
 ###############################################################################
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
-ecbuild_generate_config_headers( DESTINATION ${INSTALL_INCLUDE_DIR}/monio )
+ecbuild_generate_config_headers(DESTINATION ${INSTALL_INCLUDE_DIR}/monio)
 
 list(APPEND monio_src_files
 monio/AtlasReader.cc
@@ -55,13 +55,19 @@ monio/Writer.h
 )
 
 set(MONIO_LIB_DEP oops atlas NetCDF::NetCDF_CXX MPI::MPI_CXX)
+#set(MONIO_LIB_DEP oops atlas Boost::boost NetCDF::NetCDF_CXX MPI::MPI_CXX)
 
-ecbuild_add_library( TARGET ${PROJECT_NAME}
-                     SOURCES ${monio_src_files}
-                     PUBLIC_LIBS ${MONIO_LIB_DEP}
-                     INSTALL_HEADERS LISTED
-                     HEADER_DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}
-                     LINKER_LANGUAGE CXX )
+ecbuild_add_library(TARGET ${PROJECT_NAME}
+                    SOURCES ${monio_src_files}
+                    PUBLIC_LIBS ${MONIO_LIB_DEP}
+                    INSTALL_HEADERS LISTED
+                    HEADER_DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME})
+
+target_link_libraries(${PROJECT_NAME} PUBLIC MPI::MPI_CXX)
+target_link_libraries(${PROJECT_NAME} PUBLIC NetCDF::NetCDF_CXX)
+#target_link_libraries(${PROJECT_NAME} PUBLIC Boost::boost)
+target_link_libraries(${PROJECT_NAME} PUBLIC atlas)
+target_link_libraries(${PROJECT_NAME} PUBLIC oops)
 
 ## Include paths
 target_include_directories(${PROJECT_NAME} PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>
