--- a/ci/CMakeLists.txt
+++ b/ci/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required( VERSION 3.20 FATAL_ERROR )
 
 project( monio-ci VERSION 0.0.1 LANGUAGES C CXX Fortran )
 
+set( ENABLE_MPI ON CACHE BOOL "Compile with MPI" )
 set( ENABLE_OMP ON CACHE BOOL "Compile with OpenMP" )
 
 add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/jedicmake")
