add a lint-only script

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,15 +5,19 @@ on:
   pull_request:
     branches: [develop]
 
+env:
+  REPO: ${{ github.event.repository.name }}
+  BUNDLE: pr-${{ github.event.number }}
+
 jobs:
   build1:
     name: gnu 11.3.1 (UKMO)
     if: github.repository_owner == 'MetOffice'
     runs-on: jedi-self-hosted-rg
 
-    env:
-      REPO: ${{ github.event.repository.name }}
-      BUNDLE: pr-${{ github.event.number }}
+    # env:
+    #   REPO: ${{ github.event.repository.name }}
+    #   BUNDLE: pr-${{ github.event.number }}
 
     steps:
       - name: pre-submit cleanup
@@ -61,9 +65,9 @@ jobs:
     if: github.repository_owner == 'MetOffice'
     runs-on: ubuntu-latest
 
-    env:
-      REPO: ${{ github.event.repository.name }}
-      BUNDLE: pr-${{ github.event.number }}
+    # env:
+    #   REPO: ${{ github.event.repository.name }}
+    #   BUNDLE: pr-${{ github.event.number }}
 
     steps:
       - name: checkout current
@@ -91,10 +95,10 @@ jobs:
         if: github.event_name == 'pull_request'
         run: ./${{ env.BUNDLE }}/get-ref-branch ./${{ env.BUNDLE }}/oops
 
-      - name: build and test
+      - name: build and lint
         run: |
           docker run --rm \
-            --entrypoint=/usr/local/src/${REPO}/${BUNDLE}/build-and-test \
+            --entrypoint=/usr/local/src/${REPO}/${BUNDLE}/build-and-lint \
             --workdir=/usr/local/src/${REPO}/${BUNDLE} \
             --volume ${PWD}/${BUNDLE}:/usr/local/src/${REPO}/${BUNDLE} \
             'jcsda/docker-gnu-openmpi-dev:latest'
