--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,3 +95,42 @@ jobs:
             --workdir=/usr/local/src/${REPO}/${BUNDLE} \
             --volume ${PWD}/${BUNDLE}:/usr/local/src/${REPO}/${BUNDLE} \
             'jcsda/docker-gnu-openmpi-dev:latest'
+
+  build3:
+    if: '! github.event.pull_request.draft'
+    name: clang 10.0.0 (JCSDA)    
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: checkout current
+        uses: actions/checkout@v4
+        with:
+          path: ./${{ env.BUNDLE }}/${{ env.REPO }}
+      - name: initiate bundle
+        run: cp ./${{ env.BUNDLE }}/${{ env.REPO }}/ci/* ./${{ env.BUNDLE }}/
+
+      - name: checkout jedicmake
+        uses: actions/checkout@v4
+        with:
+          path: ./${{ env.BUNDLE }}/jedicmake
+          repository: JCSDA-internal/jedi-cmake
+          submodules: true
+          token: ${{ secrets.GH_PAT }}
+
+      - name: checkout oops
+        uses: actions/checkout@v4
+        with:
+          path: ./${{ env.BUNDLE }}/oops
+          repository: JCSDA-internal/oops
+          token: ${{ secrets.GH_PAT }}
+      - name: matching branch checkout attempt oops ${{ github.head_ref }}
+        if: github.event_name == 'pull_request'
+        run: ./${{ env.BUNDLE }}/get-ref-branch ./${{ env.BUNDLE }}/oops
+
+      - name: build and lint
+        run: |
+          docker run --rm \
+            --entrypoint=/usr/local/src/${REPO}/${BUNDLE}/build-and-lint \
+            --workdir=/usr/local/src/${REPO}/${BUNDLE} \
+            --volume ${PWD}/${BUNDLE}:/usr/local/src/${REPO}/${BUNDLE} \
+            'jcsda/docker-clang-mpich-dev:latest'
